--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@shopify/shopify-api": "^9.2.0",
     "@shopify/shopify-app-remix": "^2.5.0",
     "@shopify/shopify-app-session-storage-prisma": "^4.0.1",
+    "axios": "^1.6.8",
     "isbot": "^5.1.0",
     "prisma": "^5.8.0",
     "react": "^18.2.0",
