--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prisma": "^5.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-utils": "^7.6.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
